# perfstubs

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
deprecated/: CMakeLists.old  README.md
deprecated/examples/: CMakeLists.old
deprecated/perfstubs_api_n/: README.md  timer.c
deprecated/tool_example_n/: CMakeLists.txt  tool2_implementation.cpp
etc/: cleanup.sh  go-pgi.sh  go-xlc.sh  go.sh  libonly.sh  package.py  perfstubs-config.cmake.in  perfstubs.pc.in  perfstubs_n-config.cmake.in  perfstubs_n.pc.in
examples/: .main.c.swp  CMakeLists.txt  Config.h.in  all_api.c  all_api.cpp  asyncio_blockingio.py  asyncio_coroutine_threadsafe.py  asyncio_create_task.py  asyncio_factorial.py  asyncio_run.py  asyncio_task.py  asyncio_task_group.py  firstprime_3.12.py  generators.py  main.F90  main.c  main.cpp  main.f90  overhead.c  overhead.cpp  perfstubs_config.json  perfstubs_config_apple.json  perfstubs_py.py  python_event_filter.json  raise.py  threaded_example.cpp
implementation/: CMakeLists.txt  README.md  ToolImplementation.cpp  ToolImplementation2.cpp  implementation.cpp  tool1_implementation.cpp  tool2_implementation.cpp  two-tools.json
makefile_fortran_example/: Makefile
perfstub_api/: CMakeLists.txt  README.md  Timer.cpp  Timer.h
perfstubs/: pstubs.py  pstubs_common.py  pstubs_tensorflow.py
perfstubs_api/: Dummy.c  Dummy.cpp  README.md  README_python.md  Timer.c  Timer.cpp  Timer.h  Timer_c.h  Timer_f.h  Tool.h  __init__.py  config.h.default  event_filter.cpp  event_filter.hpp  pstubs.py  pstubs_common.py  pstubs_sys_monitoring.py  pstubs_sys_setprofile.py  pstubs_sys_settrace.py  python.cpp  timer.c  timer.cpp  timer.h  timer_f.h  tool.h
perfstubs_api_n/: README.md  config.h.in  timer.c  timer.h  timer_f.h  tool.h
pstubs/: __init__.py  __main__.py  pstubs.py  pstubs_common.py  pstubs_sys_monitoring.py  pstubs_sys_setprofile.py  pstubs_tensorflow.py
tool_example/: CMakeLists.txt  README.md  tool1_implementation.cpp
